You can now select the theme, A or B Removed the blue background behind the zoom in and out Corrected the leaflet popup text colour

--- a/www/css/xemap.css
+++ b/www/css/xemap.css
@@ -10,7 +10,7 @@ div#header2	        {padding:10px 0px 5px 0px;}
 
 -----------------------------*/
 
-body                {background: grey; font-size:24px;}
+body                {background: grey;}
 
 p.link              {text-align:center;display: block;color:red;}
 h1                  {font-size:8em;text-align:top;}
@@ -24,7 +24,7 @@ p.m                 {font-size:1em;display: block;color:yellow;}
 p.n                 {font-size:1em;display: block;color:red;}
 a img		    {border:0;}
 a		    {color:white;}
-li         	    {color:white; list-style:none;}
+/*li         	    {color:white; list-style:none;}*/
 
 ol.avail li         {color:white; list-style:none;}
 ol.avail li p span  {width:180px; display:block; float:left;}
@@ -106,7 +106,7 @@ div.wpt-box {
 
 div.inner {
     text-align: center;
-    font-size: 36px;
+    //font-size: 36px;
     padding-bottom: 20px;
     border-radius: 3px;
     /*background: #F5F5F5;*/
@@ -117,21 +117,21 @@ div.inner {
 
 div.data-box span {
     display: block;
-    font-size: 96px;
-    line-height: 128px;
+    font-size: 2.0em;
+    //line-height: 128px;
     /*color: rgba(0, 0, 0, 0.3);*/
     /*text-shadow: 0 1px 2px rgba(255, 255, 255, 0.898), 0 0 0 rgba(50, 50, 50, 0.898);*/
 }
 
 div.data-box span.red { color: rgba(200, 0, 0, 0.6); }
 div.data-box span.grn { color: rgba(0, 100, 0, 0.6); }
-div.data-box span.sml { font-size: 72px; line-height: 128px; }
-div.data-box span.pos { font-size: 40px; line-height: 50px; margin: 12px 0; }
+/*div.data-box span.sml { font-size: 0.8em; line-height: 0.8em; }*/
+div.data-box span.pos { font-size: 0.9em; margin: 3px 0; }
 
 /** responsive styles  - change number of columns **/
 @media(max-width: 1024px) { div.data-box { width:  33%; } }
-@media(max-width:  800px) { div.data-box { width:  50%; } }
-@media(max-width:  480px) { div.data-box { width: 100%; } }
+@media(max-width:  600px) { div.data-box { width:  50%; } }
+@media(max-width:  200px) { div.data-box { width: 100%; } }
 
 #setup {
     //padding: 30px;
@@ -143,11 +143,11 @@ div.data-box span.pos { font-size: 40px; line-height: 50px; margin: 12px 0; }
 
 #btMsg {
     width: 100%; 
-    //height: 100%;
+    /*@override height: 500px;*/
     box-sizing: border-box; 
     padding: 20px;
     border-radius: 15px;
-    background: #F5F5F5;
+    /*background: #F5F5F5;*/
     border: 1px solid rgba(0, 0, 0, 0.15);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
     margin-bottom: 10px;
@@ -175,4 +175,19 @@ div.data-box span.pos { font-size: 40px; line-height: 50px; margin: 12px 0; }
   }
 #date {
 
+  }
+  
+.leaflet-control-zoom-in {
+    color: darkslategrey !important;
+    text-shadow: none !important;
+  }
+
+.leaflet-control-zoom-out {
+    color: darkslategrey !important;
+    text-shadow: none !important;
+  }
+
+  .leaflet-popup-content-wrapper {
+      color: darkslategrey !important;
+      text-shadow: none !important;
   }
